# Agentic-Examples-

./: README.md
src/: chatbotExample.py  colloborationAgent.py  customerOutreachAgent.py  customerSupportAgent.py  eventPlanningAgent.py  mcp_chatbot.py  multimcp_chatbot.py  pyproject.toml  researchAgent.py  research_server.py  resumeFilter.py  tempCodeRunnerFile.py  utils.py
src/Langgraph/: reactAgent.py  reactLanggraphAgent.py
src/ProjectPlanAgents/: helper.py  projectPlan.py
src/agenticSalespipeline/: helper.py  salesPipeline.py
src/agenticSalespipeline/config/: email_engagement_tasks.yaml  lead_qualification_agents.yaml
src/instructions/: enterprise_solutions_framework.md  fake_resume.md
src/papers/climate_change/: papers_info.json
src/papers/music/: papers_info.json
src/projectReportAgent/: projectPlan.py
udacity/MultiAgent/: multiagentdesign.py  multiagentorchestrating.py  multiagentrag.py  multiagentragdemo.py  multiagentrouting.py  multiagenttool.py
udacity/MultiAgent/project/: BeaverChoiceMulitiagentdesign.docx  Beaver_Choice_MultiAgent_Documentation.docx  FILE_STRUCTURE.txt  PROJECT_DOCUMENTATION.md  README_SUBMISSION.md  SUBMISSION_SUMMARY.md  beaver_choice_multiagent.py  convert_to_word.py  generate_workflow_diagram.py  project_starter.py
udacity/module_01_extending_tools/: Udaplay_01_starter_project.ipynb  Udaplay_02_starter_project.ipynb  demo.py  externalApi.py  pydandicParserTool.py  rag1.py  rag2.py  sessionMemory1.py  sessionMemory2.py  stateMgmt2.py  stateMgmt3.py  stateMgmtExample.py  websearch.py
(+35 files in other folders)
