[project]
name = "research-server"
version = "0.1.0"
description = "MCP research server with arXiv and Anthropic integration"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.0",
    "anthropic>=0.39.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
